tests/vertical-slice/accept/sleep_until.hew
fn main() -> i64 {
    let deadline = instant::now();
    sleep_until(deadline);
    0
}
