tests/vertical-slice/reject/cascade_error_index_object.hew
fn main() {
    let _z = undefined_var[0];
}
